# skunkworks

./: AGENTS.md
a2-autopoietic-autocatalysis/: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  Cargo.toml  DESIGN.md  MODULE.bazel  README.md
a2-autopoietic-autocatalysis/bazel/: BUILD.bazel  cargo_crate.bzl
a2-autopoietic-autocatalysis/bench/: README.md  agent_network_boundary_check.py  baseline.sh  bigcodebench_runner.py  eval.py  generate_tasks.py  network_policy_smoke.py  phase0_liveness.py  score.py  self_correction.py  self_correction_demo.py  self_correction_score.py
a2-autopoietic-autocatalysis/bench/tasks/: 001_add_function.toml  002_error_variant.toml  003_budget_percentage.toml  004_causal_graph_remove.toml  005_ingester_batch.toml  006_stagnation_trend.toml  007_membrane_deny_tool.toml  008_lineage_summary.toml  009_causal_graph_depth.toml  010_signal_stats.toml  011_repair_coverage_verifier.toml  012_governor_model_stats.toml  013_scan_todos.toml  014_lineage_query_cli.toml  015_membrane_network_stats.toml
a2-autopoietic-autocatalysis/crates/a2_archive/: BUILD.bazel  Cargo.toml
a2-autopoietic-autocatalysis/crates/a2_archive/src/: journal.rs  lib.rs  schema.rs  store.rs
a2-autopoietic-autocatalysis/crates/a2_broker/: BUILD.bazel  Cargo.toml
a2-autopoietic-autocatalysis/crates/a2_broker/src/: adapt.rs  broker.rs  lib.rs
a2-autopoietic-autocatalysis/crates/a2_constitution/: BUILD.bazel  Cargo.toml
a2-autopoietic-autocatalysis/crates/a2_constitution/src/: invariants.rs  kernel.rs  lib.rs  profile.rs  verifiers.rs
a2-autopoietic-autocatalysis/crates/a2_core/: BUILD.bazel  Cargo.toml
a2-autopoietic-autocatalysis/crates/a2_core/src/: error.rs  id.rs  lib.rs  protocol.rs  traits.rs
a2-autopoietic-autocatalysis/crates/a2_eval/: BUILD.bazel  Cargo.toml
a2-autopoietic-autocatalysis/crates/a2_eval/src/: lib.rs  seed.rs  sentinel.rs
a2-autopoietic-autocatalysis/crates/a2_membrane/: BUILD.bazel  Cargo.toml
a2-autopoietic-autocatalysis/crates/a2_membrane/src/: lib.rs  policy.rs
a2-autopoietic-autocatalysis/crates/a2_raf/: BUILD.bazel  Cargo.toml
a2-autopoietic-autocatalysis/crates/a2_raf/src/: graph.rs  lib.rs  report.rs
a2-autopoietic-autocatalysis/crates/a2_sensorium/: BUILD.bazel  Cargo.toml
a2-autopoietic-autocatalysis/crates/a2_sensorium/src/: ingest.rs  lib.rs
a2-autopoietic-autocatalysis/crates/a2_workcell/: BUILD.bazel  Cargo.toml
a2-autopoietic-autocatalysis/crates/a2_workcell/src/: budget.rs  catalyst.rs  lib.rs  runtime.rs  sandbox_profile.rs  worktree_catalyst.rs
a2-autopoietic-autocatalysis/crates/a2ctl/: BUILD.bazel  Cargo.toml
a2-autopoietic-autocatalysis/crates/a2ctl/src/: main.rs  maturity.rs
a2-autopoietic-autocatalysis/crates/a2d/: BUILD.bazel  Cargo.toml
a2-autopoietic-autocatalysis/crates/a2d/src/: governor.rs  lib.rs  main.rs
a2-autopoietic-autocatalysis/crates/a2d/tests/: governor_lineage_integration.rs
a2-autopoietic-autocatalysis/docs/: HANDOFF.md  MATURITY.md  RESUME.md
a2-autopoietic-autocatalysis/docs/benchmark-results/network-policy/: 20260704-subagent-foundry-boundary-probe.json  20260710-synthetic-swe-bench-pro-attempts-smoke.json
a2-autopoietic-autocatalysis/docs/benchmark-results/self-correction/: a2-a2d-same-crate-pi-zai-glm-20260610T214917Z.jsonl  a2-anti-repeat-ablation-a2d-pi-zai-glm-20260613T214430Z.jsonl  a2-anti-repeat-ablation-compound-membrane-pi-kimi-for-coding-20260609T173319Z.jsonl  a2-anti-repeat-ablation-compound-membrane-pi-zai-glm-20260609T221922Z.jsonl  a2-anti-repeat-ablation-core-minimax-m27-20260613T221343Z.jsonl  a2-anti-repeat-ablation-core-pi-zai-glm-20260610T223656Z.jsonl  a2-archive-index-pi-kimi-k2p7-20260617T170903Z.jsonl  a2-archive-index-pi-zai-glm52-20260617T173512Z.jsonl  a2-archive-same-crate-minimax-m27-20260614T185609Z.jsonl  a2-archive-same-crate-opencode-minimax-m3-20260615T165316Z.demo-evidence.json  a2-archive-same-crate-opencode-minimax-m3-20260615T165316Z.jsonl  a2-archive-same-crate-pi-kimi-k2p7-20260615T160917Z.jsonl  a2-archive-same-crate-pi-zai-glm52-20260615T162811Z.jsonl  a2-broker-same-crate-pi-kimi-for-coding-20260606T160801Z.jsonl  a2-broker-same-crate-pi-minimax-m3-20260613T150755Z.jsonl  a2-broker-same-crate-pi-zai-glm-20260610T211349Z.jsonl  a2-compound-archive-hidden-pi-kimi-for-coding-20260606T171010Z.jsonl  a2-compound-hidden-pi-kimi-for-coding-20260606T162419Z.jsonl  a2-compound-membrane-hidden-pi-kimi-for-coding-20260606T164852Z.jsonl  a2-constitution-hardened-opencode-minimax-m3-head012efed-20260630T085936Z.jsonl  a2-constitution-hardened-pi-kimi-k2p7-20260630T000551Z.jsonl  a2-constitution-same-crate-pi-kimi-for-coding-20260608T215044Z.jsonl  a2-constitution-same-crate-pi-zai-glm-20260610T222311Z.jsonl  a2-core-same-crate-pi-kimi-for-coding-20260605T215455Z.jsonl  a2-core-same-crate-pi-kimi-k26-code-preview-20260612T083643Z.jsonl  a2-core-same-crate-pi-minimax-m3-20260605T221044Z.jsonl  a2-core-same-crate-pi-zai-glm-20260610T195349Z.jsonl  a2-harness-runs-smoke-20260630T003000Z.jsonl  a2-sensorium-same-crate-pi-kimi-k26-code-preview-20260611T220421Z.jsonl  a2-workcell-provider-pi-kimi-k2p7-20260618T151020Z.jsonl  (+5 more)
a2-autopoietic-autocatalysis/docs/plans/: 2026-07-04-agent-network-egress-enforcement.md  continuous-self-iteration.md  phase-1-implementation.md  self-correction-benchmark.md
a2-autopoietic-autocatalysis/evaluations/: claude-evaluation.md  codex-evaluation.md
a2-autopoietic-autocatalysis/proposals/: claude-proposal.md  codex-proposal.md  gemini-proposal.md
a2-autopoietic-autocatalysis/research/: 01-autopoiesis.md  02-autocatalytic-sets.md  03-agentic-se-sota.md  04-self-producing-systems.md
a2-autopoietic-autocatalysis/reviews/: claude-adversarial.md  codex-adversarial.md
a2-autopoietic-autocatalysis/todos/: anti-repeat-retry-strategy.md  retry-task-contract-from-verification.md  self-correction-loop-recovery.md  self-correction-loop.md  structured-external-verification.md  verifier-derived-relevant-files.md  worktree-task-verifier.md
a2d-autopoietic-autocatalysis-deutero/crates/a2d-providers/: Cargo.toml
(+924 files in other folders)
