exports_files([
    "Cargo.lock",
    "Cargo.toml",
])

filegroup(
    name = "all_rust_targets",
    srcs = [
        "//crates/a2_archive",
        "//crates/a2_broker",
        "//crates/a2_constitution",
        "//crates/a2_core",
        "//crates/a2_eval",
        "//crates/a2_membrane",
        "//crates/a2_raf",
        "//crates/a2_sensorium",
        "//crates/a2_workcell",
        "//crates/a2ctl",
        "//crates/a2d",
        "//crates/a2d:a2d_bin",
    ],
    visibility = ["//visibility:public"],
)

test_suite(
    name = "all_crate_tests",
    tests = [
        "//crates/a2_archive:a2_archive_test",
        "//crates/a2_broker:a2_broker_test",
        "//crates/a2_constitution:a2_constitution_test",
        "//crates/a2_core:a2_core_test",
        "//crates/a2_eval:a2_eval_test",
        "//crates/a2_membrane:a2_membrane_test",
        "//crates/a2_raf:a2_raf_test",
        "//crates/a2_sensorium:a2_sensorium_test",
        "//crates/a2_workcell:a2_workcell_test",
        "//crates/a2ctl:a2ctl_test",
        "//crates/a2d:a2d_bin_test",
        "//crates/a2d:a2d_test",
        "//crates/a2d:governor_lineage_integration_test",
    ],
    visibility = ["//visibility:public"],
)
