[workspace]
resolver = "2"
members = [
    "crates/a2_core",
    "crates/a2_constitution",
    "crates/a2_workcell",
    "crates/a2d",
    "crates/a2ctl",
    "crates/a2_membrane",
    "crates/a2_broker",
    "crates/a2_eval",
    "crates/a2_archive",
    "crates/a2_raf",
    "crates/a2_sensorium",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Lightless-Labs/skunkworks"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v7", "serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Workspace crates
a2_core = { path = "crates/a2_core" }
a2_constitution = { path = "crates/a2_constitution" }
a2_workcell = { path = "crates/a2_workcell" }
a2_membrane = { path = "crates/a2_membrane" }
a2_broker = { path = "crates/a2_broker" }
a2_eval = { path = "crates/a2_eval" }
a2_archive = { path = "crates/a2_archive" }
a2_raf = { path = "crates/a2_raf" }
a2_sensorium = { path = "crates/a2_sensorium" }
