[package]
name = "a2_constitution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
a2_core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
thiserror = { workspace = true }
async-trait = { workspace = true }
