load("//bazel:cargo_crate.bzl", "cargo_manifest_env", "cargo_rust_binary")

cargo_manifest_env()

cargo_rust_binary(
    name = "a2ctl",
    package = "a2ctl",
    internal_deps = [
        "//crates/a2_archive",
        "//crates/a2_broker",
        "//crates/a2_core",
        "//crates/a2_eval",
        "//crates/a2_sensorium",
        "//crates/a2_workcell",
        "//crates/a2d",
    ],
)
