[package]
name = "a2ctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
a2_core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
