[package]
name = "a2ctl"
description = "CLI for A² — Autopoietic Autocatalysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
a2_archive = { workspace = true }
a2_core = { workspace = true }
a2_broker = { workspace = true }
a2d = { workspace = true }
a2_eval = { workspace = true }
a2_sensorium = { workspace = true }
a2_workcell = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true }
