load(
    "//bazel:cargo_crate.bzl",
    "cargo_manifest_env",
    "cargo_rust_binary",
    "cargo_rust_integration_test",
    "cargo_rust_library",
)

cargo_manifest_env()

cargo_rust_library(
    name = "a2d",
    internal_deps = [
        "//crates/a2_core",
        "//crates/a2_workcell",
    ],
    test_internal_deps = ["//crates/a2_archive"],
)

cargo_rust_binary(
    name = "a2d_bin",
    package = "a2d",
    crate_name = "a2d",
    internal_deps = [
        ":a2d",
        "//crates/a2_core",
        "//crates/a2_workcell",
    ],
    test_internal_deps = ["//crates/a2_archive"],
)

cargo_rust_integration_test(
    name = "governor_lineage_integration",
    package = "a2d",
    internal_deps = [
        ":a2d",
        "//crates/a2_archive",
        "//crates/a2_core",
        "//crates/a2_workcell",
    ],
)
