[package]
name = "a2d"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
a2_core = { workspace = true }
a2_workcell = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
a2_archive = { workspace = true }
rusqlite = { workspace = true }
