[package]
name = "a2d-providers"
version.workspace = true
edition.workspace = true

[dependencies]
a2d-core = { path = "../a2d-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
